gcc/testsuite/rust/rustc/ui/parser/bad-struct-following-where.rs
struct A where T: Sized !
// { dg-error "" "" { target *-*-* } .-1 }

